test/testdata/classes/methods/properties/setter_too_many_params_error.lox
class Foo {
  // error: property setter can only have one parameter
  set bar(x, y, z) {}
}
